# ZeroStudio

./: CROWDIN_CONTRIBUTORS.md  README.md  crowdin-contributors.json  git  gradle.properties  zerogit
.github/workflows/: build-apk.yml
StringTranslation/backup/values-de-rDE/: strings.xml
StringTranslation/backup/values-es-rES/: strings.xml
StringTranslation/values-de-rDE/: strings.xml
core/git/: build.gradle.kts
core/git/src/main/: AndroidManifest.xml
core/layout-editor/src/main/: AndroidManifest.xml
core/resources/: build.gradle.kts
core/resources/src/main/: AndroidManifest.xml
core/zero-mcp-server/src/main/: AndroidManifest.xml
docs/AndroidSdkTool/: manifest.json  ndk
docs/TODO/bug/: lsp构建服务冲突
editor/tree-sitter-ndk/aidl/: build.gradle.kts
editor/tree-sitter-ndk/android-tree-sitter/: build.gradle.kts  consumer-rules.pro
editor/tree-sitter-ndk/assembly-language/arm/: build.gradle.kts
editor/tree-sitter-ndk/assembly-language/arm64/: build.gradle.kts
editor/tree-sitter-ndk/assembly-language/asm/: build.gradle.kts
editor/tree-sitter-ndk/assembly-language/masm/: build.gradle.kts
editor/tree-sitter-ndk/assembly-language/nasm/: build.gradle.kts
editor/tree-sitter-ndk/bash/: build.gradle.kts
editor/tree-sitter-ndk/c/: build.gradle.kts
editor/tree-sitter-ndk/cmake/: build.gradle.kts
editor/tree-sitter-ndk/cpp/: build.gradle.kts
editor/tree-sitter-ndk/css/: build.gradle.kts
editor/tree-sitter-ndk/dart/: build.gradle.kts
editor/tree-sitter-ndk/go/: build.gradle.kts
editor/tree-sitter-ndk/googleSqlBigquery/: build.gradle.kts
editor/tree-sitter-ndk/groovy/: build.gradle.kts
editor/tree-sitter-ndk/java/: build.gradle.kts
editor/tree-sitter-ndk/javascript/: build.gradle.kts
editor/tree-sitter-ndk/json/: build.gradle.kts
editor/tree-sitter-ndk/kotlin/: build.gradle.kts
editor/tree-sitter-ndk/log/: build.gradle.kts
editor/tree-sitter-ndk/lua/: build.gradle.kts
editor/tree-sitter-ndk/make/: build.gradle
editor/tree-sitter-ndk/markdown/: build.gradle.kts
editor/tree-sitter-ndk/objectiveC/: build.gradle.kts
editor/tree-sitter-ndk/objectiveCpp/: build.gradle.kts
editor/tree-sitter-ndk/php/: build.gradle.kts
editor/tree-sitter-ndk/plsql/: build.gradle.kts
editor/tree-sitter-ndk/properties/: build.gradle.kts
editor/tree-sitter-ndk/proto/: build.gradle.kts
editor/tree-sitter-ndk/python/: build.gradle.kts
editor/tree-sitter-ndk/reStructuredText/: build.gradle.kts
editor/tree-sitter-ndk/rust/: build.gradle.kts
editor/tree-sitter-ndk/smali/: build.gradle.kts
editor/tree-sitter-ndk/sql/: build.gradle.kts
editor/tree-sitter-ndk/sqlite/: build.gradle.kts
editor/tree-sitter-ndk/swift/: build.gradle.kts
editor/tree-sitter-ndk/toml/: build.gradle.kts
lsp/: clangd.tar.xz
lsp/clangd/src/main/cpp/: CMakeLists.txt
lsp/clangd/src/main/cpp/compiler/: clang_compiler.cpp  clang_compiler.h  llvm_target_init.h
lsp/clangd/src/main/cpp/linker/: lld_linker.cpp  lld_linker.h  lld_linker_api.h
lsp/clangd/src/main/cpp/lsp/simple/: simple_lsp_client.cpp
lsp/clangd/src/main/cpp/runner/: shared_runner.h
lsp/clangd/src/main/cpp/server/: link_client.cpp  link_client.h  link_server.cpp  link_server_jni.cpp  link_server_protocol.h
lsp/clangd/src/main/cpp/treesitter/core/: ts_jni.cpp  ts_node_jni.cpp  ts_query_jni.cpp
lsp/clangd/src/main/cpp/treesitter/cpp/: cpp_jni.cpp
lsp/clangd/src/main/cpp/utils/: file_utils.cpp  file_utils.h  jni_utils.cpp  jni_utils.h
utilities/: templates-api.tar.xz
utilities/templates-api/: build.gradle.kts
utilities/templates-impl/androidstudio/activities/aiGlassesActivity/: aiGlassesActivityManifest.kt  aiGlassesActivityRecipe.kt  aiGlassesActivityTemplate.kt
utilities/templates-impl/androidstudio/activities/aiStarter/: aiStarterRecipe.kt  aiStarterTemplate.kt
utilities/templates-impl/androidstudio/activities/androidTVActivity/: androidManifestXml.kt  androidTVActivityRecipe.kt  androidTVActivityTemplate.kt
utilities/templates-impl/androidstudio/activities/archStarterActivity/: archStarterActivityRecipe.kt  archStarterActivityTemplate.kt
utilities/templates-impl/androidstudio/activities/basicActivity/: basicActivityTemplate.kt
utilities/templates-impl/androidstudio/fragments/blankFragment/: blankFragmentRecipe.kt  blankFragmentTemplate.kt
utilities/templates-impl/androidstudio/fragments/fullscreenFragment/: fullscreenFragmentRecipe.kt  fullscreenFragmentTemplate.kt
utilities/templates-impl/androidstudio/fragments/googleAdMobAdsFragment/: androidManifestXml.kt  googleAdMobAdsFragmentRecipe.kt  googleAdMobAdsFragmentTemplate.kt
utilities/templates-impl/androidstudio/fragments/googleMapsFragment/: androidManifestXml.kt  googleMapsFragmentRecipe.kt  googleMapsFragmentTemplate.kt
utilities/templates-impl/androidstudio/fragments/listFragment/: listFragmentRecipe.kt  listFragmentTemplate.kt
utilities/templates-impl/androidstudio/fragments/loginFragment/: loginFragmentRecipe.kt  loginFragmentTemplate.kt
utilities/templates-impl/androidstudio/fragments/modalBottomSheet/: modalBottomSheetRecipe.kt  modalBottomSheetTemplate.kt
utilities/templates-impl/androidstudio/fragments/scrollFragment/: scrollFragmentRecipe.kt  scrollFragmentTemplate.kt
utilities/templates-impl/androidstudio/fragments/settingsFragment/: settingsFragmentRecipe.kt  settingsFragmentTemplate.kt
utilities/templates-impl/androidstudio/fragments/viewModelFragment/: viewModelFragmentRecipe.kt  viewModelFragmentTemplate.kt
utilities/templates-impl/androidstudio/other/androidManifest/: androidManifestRecipe.kt  androidManifestTemplate.kt  androidManifestXml.kt
utilities/templates-impl/androidstudio/other/appWidget/: androidManifestXml.kt  appWidgetRecipe.kt  appWidgetTemplate.kt
utilities/templates-impl/androidstudio/other/automotiveMediaService/: androidManifestXml.kt  automotiveMediaServiceRecipe.kt  automotiveMediaServiceTemplate.kt  buildGradle.kt
utilities/templates-impl/imguiTemplate/: AndroidImGuiTemplate.tar.xz  imguiActivitySrc.kt  imguiManifest.kt
utilities/treeview2/: build.gradle.kts
(+423 files in other folders)
